--- a/README.rdoc
+++ b/README.rdoc
@@ -1,8 +1,10 @@
-== README
+README
 
 TEST
 Add stuff here.
 Even more stuff
+mooore stuff
+
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
