fred more stuff

--- a/README.rdoc
+++ b/README.rdoc
@@ -4,6 +4,8 @@ TEST
 Add stuff here.
 Even more stuff
 mooore stuff
+Fred is adding more stuff
+
 
 
 This README would normally document whatever steps are necessary to get the
