Cobi more stuff

--- a/README.rdoc
+++ b/README.rdoc
@@ -11,6 +11,8 @@ Fred is adding more stuff
 mooore jill stuff
 jill adding stuff
 just for fun
+Hello World
+mooore stuff
 
 
 This README would normally document whatever steps are necessary to get the
