--- a/README.rdoc
+++ b/README.rdoc
@@ -29,3 +29,9 @@ Things you may want to cover:
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
+
+MASTER UPDATE
+MASTER UPDATE
+MASTER UPDATE
+MASTER UPDATE
+
